[package]
name = "http-tunnel"
version = "0.1.10"
authors = ["Eugene Retunsky"]
license = "MIT OR Apache-2.0"
edition = "2018"
publish = true
readme = "README.md"
repository = "https://github.com/xnuter/http-tunnel"
homepage = "https://github.com/xnuter/http-tunnel"
description = """
HTTP Tunnel/TCP Proxy example written in Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-native-tls = "0.3"
native-tls = "0.2"
clap = "2.33"
regex = "1.3"
rand = "0.8"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
serde_regex = "1.1"
humantime-serde = "1.0"
async-trait = "0.1"
strum = "0.19"
strum_macros = "0.19"
derive_builder = "0.9"
log = "0.4"
log4rs = "1.0.0-alpha-1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["full"] }
bytes = "1"
futures = "0.3"
time = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[features]
# For legacy software you can enable plain_text tunnelling
default = []
plain_text = []
